# regulated_pure_pursuit_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  regulated_pure_pursuit_controller.xml
include/regulated_pure_pursuit_controller/: geometry_utils.h  helper.h  regulated_pure_pursuit_controller.h
src/: helper.cpp  regulated_pure_pursuit_controller.cpp
test/: regulated_pure_pursuit_tests.cpp  test.txt
