<package>
  <name>regulated_pure_pursuit_controller</name>
  <version>0.0.1</version>
  <description>The regulated_pure_pursuit_controller package</description>

  <maintainer email="johnchenguanzhong@gmail.com">johnTGZ</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>ddynamic_reconfigure</run_depend>

  <build_depend>mbf_costmap_core</build_depend>
  <run_depend>mbf_costmap_core</run_depend>
  
  <build_depend>mbf_msgs</build_depend>
  <run_depend>mbf_msgs</run_depend>

  <export>
    <nav_core plugin="${prefix}/regulated_pure_pursuit_controller.xml"/>
    <mbf_costmap_core plugin="${prefix}/regulated_pure_pursuit_controller.xml" />
  </export>

</package>
